# mavrion-conect

./: .gitignore  .replit  AUDITORIA_MAVRION_CONECT.md  MAVRION_CONECT_SISTEMA_COMPLETO.md  README.md  RELATORIO_SISTEMA_MAVRION_CONECT.md  SYSTEM_OVERVIEW.md  audit-export.txt  cookies.txt  cookies2.txt  deploy.sh  docker-compose.yml  e2e-report.txt  ecosystem.config.cjs  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts
attached_assets/: Pasted--AUDITORIA-COMPLETA-MAVRION-CONECT-Gerado-em-04-03-2026_1772646256373.txt  Pasted--AUDITORIA-T-CNICA-COMPLETA-MAVRION-CONECT-Gerado-em-04_1772647270489.txt  Pasted--CORRE-ES-P-S-TESTE-E2E-MAVRION-CONECT-Baseado-no-resul_1772652071400.txt  Pasted--PROMPT-Aplicar-Corre-es-CAF-Schema-Rotas-Contexto-Este_1772589721947.txt  Pasted--PROMPT-COORDENADAS-NO-FORMUL-RIO-DE-ATIVOS-Adiciona-la_1772641878848.txt  Pasted--PROMPT-Desativar-M-dulo-CAF-Objetivo-Desativar-o-m-dul_1772593608312.txt  Pasted--PROMPT-Extrator-CAF-v4-HTML-Scraping-sem-PDF-Contexto-_1772574190244.txt  Pasted--PROMPT-Integra-o-de-APIs-Agro-no-M-dulo-Geo-Rural-Cont_1772571921458.txt  Pasted--PROMPT-PROSPEC-O-REVERSA-INTELIGENTE-VERS-O-FINAL-Melh_1772645511406.txt  Pasted--PROMPT-PROSPEC-O-REVERSA-POR-ATIVO-Implementa-api-pros_1772644981646.txt  Pasted--PROMPT-TESTE-E2E-COMPLETO-V2-DEFINITIVO-Substitui-PROM_1772651453777.txt  Pasted--PROMPTS-MAVRION-Prontos-para-colar-no-Replit-AI-Cole-u_1772600023415.txt  Pasted-ARQUITETURA-DE-UX-MAVRION-CONNECT-Menu-enxuto-Enriqueci_1772765907100.txt  (+51 more)
client/: requirements.md
dist-backup/: index.cjs
(+155 files in other folders)
